// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render should render correctly 1`] = `
<button
  className="button button--theme-grey button--big"
  onClick={[Function]}
  type="button"
>
  0
</button>
`;

exports[`Button render should render correctly 2`] = `
<button
  className="button button--theme-grey"
  onClick={[Function]}
  type="button"
>
  0
</button>
`;

exports[`Button render should render correctly 3`] = `
<button
  className="button button--theme-grey button--pink"
  onClick={[Function]}
  type="button"
>
  0
</button>
`;
